--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -1,113 +1,158 @@
 .layout {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .header {
-    background-color: #f2f2f2;
+  background-color: #f2f2f2;
 }
 
 .headerContainer {
-    display: flex;
-    justify-content: left;
-    align-items: center;
+  display: flex;
+  justify-content: left;
+  align-items: center;
 }
 
 .headerTitleContainer {
-    display: flex;
-    align-items: center;
-    margin-left: 14px;
-    text-decoration: none;
+  display: flex;
+  align-items: center;
+  margin-left: 14px;
+  text-decoration: none;
 }
 
 .headerTitle {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 28px;
-    display: flex;
-    align-items: flex-end;
-    color: #242424;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 28px;
+  display: flex;
+  align-items: flex-end;
+  color: #242424;
 }
 
 .headerIcon {
-    height: 32px;
-    width: 32px;
-    margin-left: 36px;
+  height: 32px;
+  width: 32px;
+  margin-left: 36px;
 }
 
 .shareButtonContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 5px 12px;
-    gap: 4px;
-    width: 86px;
-    height: 32px;
-    background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #0F6CBD 33.63%, #2D87C3 70.31%, #8DDDD8 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
-    border-radius: 4px;
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-    position: absolute;
-    right: 20px;
-    cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 12px;
+  gap: 4px;
+  width: 86px;
+  height: 32px;
+  background: radial-gradient(
+      109.81% 107.82% at 100.1% 90.19%,
+      #0f6cbd 33.63%,
+      #2d87c3 70.31%,
+      #8dddd8 100%
+    )
+    /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+  border-radius: 4px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  position: absolute;
+  right: 20px;
+  cursor: pointer;
 }
 
 .shareButton {
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 .shareButtonText {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 20px;
-    display: flex;
-    align-items: center;
-    color: #FFFFFF;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
 }
 
 .urlTextBox {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    color: #707070;
-    border: 1px solid #D1D1D1;
-    border-radius: 4px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #707070;
+  border: 1px solid #d1d1d1;
+  border-radius: 4px;
 }
 
 .copyButtonContainer {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 5px 12px;
-    gap: 4px;
-    background: #FFFFFF;
-    border: 1px solid #D1D1D1;
-    border-radius: 4px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 12px;
+  gap: 4px;
+  background: #ffffff;
+  border: 1px solid #d1d1d1;
+  border-radius: 4px;
 }
+.chatContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  background: radial-gradient(
+    108.78% 108.78% at 50.02% 19.78%,
+    #ffffff 57.29%,
+    #eef6fe 100% crimson
+  );
+  /* box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 8px;
+  overflow-y: auto;
+  max-height: calc(100vh - 100px); */
+}
+/*.chatContainerDark {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  background: radial-gradient(
+    108.78% 108.78% at 50.02% 19.78%,
+    #424242 57.29%,
+    #e0e0e0 100% */
+.chatContainerDark {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  background: #9db2bf;
 
+  /* );
+   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 8px;
+  overflow-y: auto;
+  max-height: calc(100vh - 100px); */
+}
 .copyButtonContainer:hover {
-    cursor: pointer;
-    background: #D1D1D1;
+  cursor: pointer;
+  background: #d1d1d1;
 }
 
 .copyButton {
-    color: #424242;
+  color: #424242;
 }
 
 .copyButtonText {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 20px;
-    display: flex;
-    align-items: center;
-    color: #242424;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  color: #242424;
+}
+.ms-Stack._chatRoot {
+  color: #424242;
 }
